# mobile-robotics-basics

lesson 11 (micro-ros)/: README.md  micro_ros_esp32_stack.md
lesson 12 (2D and 3D LiDAR)/: 2d_lidar.md  3d_lidar.md
lesson 8 (Gazebo)/: 01-installation.md  02-first-world.md  03-urdf-xacro.md  04-spawn-robot.md  05-bridge.md  06-sensors.md  07-world-teleop.md  08-balancer.md  README.md  custom_world_teleop.md  first_world.md  installing_gazebo.md  lqr_theory.docx  physics_robotics.docx  ros_gz_bridge.md  sensors_lidar_imu.md  spawning_urdf.md
lesson 9 (NAV2)/: README.md  introducing_nav2.md  nav2_costmaps.md  nav2_localization.md  nav2_turtlebot3_sim.md
ros2_ws/src/my_robot_gazebo/: README.md  package.xml  setup.py
ros2_ws/src/my_robot_gazebo/config/: bridge.yaml
ros2_ws/src/my_robot_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py
ros2_ws/src/my_robot_gazebo/rviz/: my_robot.rviz
ros2_ws/src/my_robot_gazebo/urdf/: my_robot.urdf.xacro
ros2_ws/src/my_robot_gazebo/worlds/: empty.sdf  obstacles.sdf
